fix height squishing issue

--- a/style.css
+++ b/style.css
@@ -42,13 +42,6 @@ img {
   max-width: 100%;
 }
 
-.container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
 header,
 footer {
   display: flex;
@@ -71,6 +64,10 @@ footer a {
   line-height: 19px;
 
   color: var(--primary);
+}
+
+main {
+  padding: 100px 0;
 }
 
 main p {
@@ -174,10 +171,13 @@ main p:nth-child(3) {
 @media screen and (min-width: 1500px) {
   main {
     position: relative;
+    max-width: 1650px;
+    margin: 0 auto;
   }
 
   main p {
-    font-size: 40.75rem;
+    font-size: 43.75rem;
+    transform: translate(-5rem);
   }
 
   main img {
@@ -190,11 +190,6 @@ main p:nth-child(3) {
 /* Desktop styles */
 @media screen and (min-width: 1600px) {
   main {
-    max-width: 1650px;
-    margin: 0 auto;
-  }
-
-  main p {
-    font-size: 43.75rem;
+    overflow: visible;
   }
 }
